# Water

./: .ccls  .clang-format  .vimspector.json  CMakeLists.txt  Hatom  Hatom.f90  Hatom_real.F90  Hatom_save.F90  Makefile  Makefile_candela  Makefile_save  README.md  a.out  algo.sh  angular_C2v_a1.inp  angular_C2v_b1.inp  angular_C2v_b2.inp  angular_D2h_ag.inp  angular_D2h_b1u.inp  ar_no_hf.molden  arg_12mcscf.molden  be_no.molden  be_no_hf.molden  bieleclist.cpp  bieleclist.h  center.inp  class_grid.cpp  class_grid.cpp1  class_grid.cpp_algo  class_grid.cpp_save  class_grid.cpp_save11  class_grid.cpp~  class_grid.h  class_grid_mod.cpp  class_grid_save.cpp  class_grid_save.cpp1  co2.molden  common-meta-info.in  dvr_mod.f90  dvr_mod_radau.f90  (+82 more)
apps/: CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark_Lobatto.cpp
benchmark/headers/: COUL90.txth  Lebedev.txth  Quadrature.H  Quadrature_Lobatto.H  Quadrature_Radau.H  gnuplot.H
benchmark/src/: COUL90.txtcpp  Lebedev.txtcpp  Quadrature_Lobatto.cpp  Quadrature_Radau.cpp
cmake/: FindMKL.cmake  findLAPACK.cmake
doc/Double_Photoionization_triatomics/: DVR.triatomic.doublePI_v2.aux  DVR.triatomic.doublePI_v2.bbl  DVR.triatomic.doublePI_v2.blg  DVR.triatomic.doublePI_v2.dvi  DVR.triatomic.doublePI_v2.toc
doc/Double_Photoionization_triatomics/backups/: DVR.triatomic.doublePI_v1.tex  DVR.triatomic.doublePI_v2.tex  DVR_doublePI.bib
docs/: Doxyfile.docs  Makefile  cmake_install.cmake  conf.py  index.rst
fortran_code/: get_grid_param.f90  getgridRad.f90  setgridRad.f90
tests/: CMakeLists.txt
tests/testCOUL90/: testCOUL90  testCOUL90.cpp
tests/testFEMDVR/: lob_D2.out  lob_derivative.out  rad_D2.out  rad_derivative.out  testFEMDVR.cpp
tests/testJoperator/: testJoperator.cpp
tests/testKoperator/: testKoperator.cpp
tests/testLebedev/: testLebedev.cpp
tests/testMOPartialWaveRepresentation/: testMOPartialWaveRepresentation.cpp
tests/testParseMolden/: testParseMolden.cpp
tests/testParseMolden/inputs/: H2O_scf.molden  h2o.molden
tests/testQuad/: testQuad.cpp
tests/testToperator/: testToperator.cpp
